@@ -1,4 +1,5 @@
 # Copyright (C) 2000, 2001, 2002, 2003, 2004 Philip Aston
+# Copyright (C) 2004 John Stanford White
 # All rights reserved.
 #
 # This file is part of The Grinder software distribution. Refer to
@@ -105,6 +106,7 @@ statistic.tps=TPS
 statistic.peakTPS=Peak TPS
 statistic.httpplugin.meanResponseLengthKey=Mean response length
 statistic.httpplugin.responseBPSKey=Response bytes per second
+statistic.httpplugin.responseErrorsKey=Response errors
 
 graph.test.label=Test
 graph.averageSuffix.label=(mean)
