@@ -1,4 +1,5 @@
-// Copyright (C) 2000, 2001, 2002, 2003 Philip Aston
+// Copyright (C) 2000, 2001, 2002, 2003, 2004 Philip Aston
+// Copyright (C) 2004 John Stanford White
 // All rights reserved.
 //
 // This file is part of The Grinder software distribution. Refer to
@@ -84,6 +85,13 @@ public final class StatisticsIndexMap implements Serializable {
     "httpplugin.responseLengthKey";
 
   /**
+   * Special slot for the HTTP plugin so it doesn't steal "user"
+   * indices.
+   */
+  public static final String HTTP_PLUGIN_RESPONSE_ERRORS_KEY =
+    "httpplugin.responseErrorsKey";
+
+  /**
    * Singleton accessor.
    *
    * @return The singleton <code>StatisticsIndexMap</code>.
@@ -107,6 +115,7 @@ public final class StatisticsIndexMap implements Serializable {
     m_map.put("userLong4", new LongIndex(nextLongIndex++));
     m_map.put(HTTP_PLUGIN_RESPONSE_STATUS_KEY, new LongIndex(nextLongIndex++));
     m_map.put(HTTP_PLUGIN_RESPONSE_LENGTH_KEY, new LongIndex(nextLongIndex++));
+    m_map.put(HTTP_PLUGIN_RESPONSE_ERRORS_KEY, new LongIndex(nextLongIndex++));
 
     m_numberOfLongIndicies = nextLongIndex;
 
