@@ -17,6 +17,8 @@ Grinder 3.0-beta19
   reported this, and to Jan Wilmaers and Bart Bauwens for their
   investigation and analysis.
 
+  HTTP response errors statistic from John Stanford White.
+
 
 Grinder 3.0-beta18
 ------------------
